--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <li>cooking</li>
   </ol>
   <hr>
-  <h3><a href="/contactinformation.html ">Contact infromation</a></h3>
+  <h3><a href="contactinformation.html ">Contact infromation</a></h3>
 <hr>
 <h3>Time in institution</h3>
 <table>
